--- a/src/app/components/settings/updates/updates/updates.component.html
+++ b/src/app/components/settings/updates/updates/updates.component.html
@@ -8,6 +8,6 @@
   </div>
 </mat-dialog-content>
 <mat-dialog-actions align="end">
-  <button mat-raised-button [mat-dialog-close]="true"><mat-icon>close</mat-icon> Latter</button>
+  <button mat-raised-button (click)="closeDailog()"><mat-icon>close</mat-icon> Latter</button>
   <button mat-raised-button color="primary" (click)="onUpdateYes()"><mat-icon>cloud_download</mat-icon> Download</button>
 </mat-dialog-actions>
