--- a/src/themes/custom-themes.scss
+++ b/src/themes/custom-themes.scss
@@ -3,9 +3,10 @@
 
 
 $custom-primary: mat-palette($mat-pink, A400);
-$custom-acccent: mat-palette($mat-grey, 800);
+$custom-acccent: mat-palette($mat-grey, 900);
 $custom-warn: mat-palette($mat-red);
 $custom-theme: mat-dark-theme($custom-primary, $custom-acccent, $custom-warn);
+
 //FULL BLACK
 $custom-primary-full-black: mat-palette($mat-grey, 900);
 $custom-acccent-full-black: mat-palette($mat-grey, 700);
@@ -17,6 +18,7 @@ $custom-primary-theme1: mat-palette($mat-purple, 500);
 $custom-acccent-theme1: mat-palette($mat-purple, 400);
 $custom-warn-theme1: mat-palette($mat-red, A400);
 $custom-theme-theme1: mat-light-theme($custom-primary-theme1, $custom-acccent-theme1, $custom-warn-theme1);
+
 // YELLOW BROWN  THEME
 $custom-primary-theme2: mat-palette($mat-amber, A700);
 $custom-acccent-theme2: mat-palette($mat-amber, A400);
@@ -27,23 +29,25 @@ $custom-theme-theme2: mat-dark-theme($custom-primary-theme2, $custom-acccent-the
     ::-webkit-scrollbar {
         width: 15px;
     }
-     
+
     ::-webkit-scrollbar-track {
-        // box-shadow: inset 0 0 6px rgb(99, 99, 99); 
+        // box-shadow: inset 0 0 6px rgb(99, 99, 99);
         // border-color: rgb(102, 102, 102);
         // background-color:  rgb(114, 114, 114);
         background-color: #424242;
         border-radius: 2px;
     }
-     
+
     ::-webkit-scrollbar-thumb {
         border-radius: 2px;
         background-color:  rgb(114, 114, 114);
         border-color: rgb(48, 48, 48);
-        // box-shadow: inset 0 0 6px rgba(99, 99, 99, 0.144); 
+        // box-shadow: inset 0 0 6px rgba(99, 99, 99, 0.144);
     }
 
     @include angular-material-theme($custom-theme-full-black);
+
+
 }
 
 .dark-theme-red{
@@ -55,35 +59,40 @@ $custom-theme-theme2: mat-dark-theme($custom-primary-theme2, $custom-acccent-the
     ::-webkit-scrollbar {
         width: 15px;
     }
-     
+
     ::-webkit-scrollbar-track {
-        // box-shadow: inset 0 0 6px rgb(99, 99, 99); 
+        // box-shadow: inset 0 0 6px rgb(99, 99, 99);
         // border-color: rgb(102, 102, 102);
         // background-color:  rgb(114, 114, 114);
         background-color: #424242;
         border-radius: 2px;
     }
-     
+
     ::-webkit-scrollbar-thumb {
         border-radius: 2px;
         background-color:  rgb(114, 114, 114);
         border-color: rgb(48, 48, 48);
-        // box-shadow: inset 0 0 6px rgba(99, 99, 99, 0.144); 
+        // box-shadow: inset 0 0 6px rgba(99, 99, 99, 0.144);
     }
 
+
     @include angular-material-theme($custom-theme);
+
+    mat-card {
+      background-color:  mat-color($custom-acccent, 900);
+    }
 }
 
 .light-theme-purple{
     ::-webkit-scrollbar {
         width: 15px;
     }
-     
+
     ::-webkit-scrollbar-track {
         background-color: #424242;
         border-radius: 2px;
     }
-     
+
     ::-webkit-scrollbar-thumb {
         border-radius: 2px;
         background-color:  rgb(114, 114, 114);
@@ -94,9 +103,9 @@ $custom-theme-theme2: mat-dark-theme($custom-primary-theme2, $custom-acccent-the
 
 .dark-theme-brown{
     td, tr, th, .mat-paginator-outer-container{
-        background-color: #3e2723; 
+        background-color: #3e2723;
     }
-    
+
     mat-sidenav-content{
         background: #1b0000;
     }
@@ -104,12 +113,12 @@ $custom-theme-theme2: mat-dark-theme($custom-primary-theme2, $custom-acccent-the
     ::-webkit-scrollbar {
         width: 15px;
     }
-     
+
     ::-webkit-scrollbar-track {
         background-color: #424242;
         border-radius: 2px;
     }
-     
+
     ::-webkit-scrollbar-thumb {
         border-radius: 2px;
         background-color:  rgb(114, 114, 114);
