--- a/src/app/components/shared/toolbar/toolbar.component.html
+++ b/src/app/components/shared/toolbar/toolbar.component.html
@@ -36,10 +36,7 @@
           <button mat-raised-button class="sidenav-button" (click)="onNavigateTo('regular-bills')" color="primary"><mat-icon>receipt</mat-icon> RECORDS </button>
         </mat-nav-list>
         <mat-nav-list>
-          <button mat-raised-button class="sidenav-button" (click)="onNavigateTo('categories')" color="primary"><mat-icon>category</mat-icon> CATEGORIES </button>
-        </mat-nav-list>
-        <mat-nav-list>
-          <button mat-raised-button class="sidenav-button" (click)="onNavigateTo('units')" color="primary"><mat-icon>casino</mat-icon> UNITS </button>
+          <button mat-raised-button class="sidenav-button" (click)="onNavigateTo('attributes')" color="primary"><mat-icon>square_foot</mat-icon> ATTRIBUTES </button>
         </mat-nav-list>
         <mat-nav-list *ngIf="staticItems">
           <button mat-raised-button class="sidenav-button" (click)="onNavigateTo('items-manager')" color="primary"><mat-icon>change_history</mat-icon> ITEMS </button>
