UI modified for static mode

--- a/src/app/components/shared/attributes/category/category.component.html
+++ b/src/app/components/shared/attributes/category/category.component.html
@@ -1,29 +1,8 @@
-<!-- <div class="cat-fiels">
-      <div>
-      <div class="heading">
-        <p>Create new</p>
-      </div>
-      <div>
-        <form>
-          <mat-form-field class="form-field">
-            <mat-label>Unit Name</mat-label>
-            <input ngModel name="unitName" #unitName="ngModel" matInput placeholder="Kilo, Meter etc..." required>
-            <mat-icon matSuffix>lens</mat-icon>
-          </mat-form-field>
-          <button mat-raised-button (click)="setUnit(unitName.value); unitName.reset();"
-          [disabled]="!unitName.valid">Save</button>
-        </form>
-      </div>
-    </div>
-  </div>
-   -->
-
-
 <div class="main-wrapper">
-  <div class="no-attr-found" *ngIf="getAllUnits.length === 0">
+  <div class="no-attr-found" *ngIf="getAllCategories.length === 0">
     <mat-label>Click <mat-icon>add</mat-icon> to add new category</mat-label>
   </div>
-  <div class="table-section" *ngIf="getAllUnits.length > 0">
+  <div class="table-section" *ngIf="getAllCategories.length > 0">
     <mat-form-field class="wide-input-field">
       <input matInput (keyup)="applyFilter($event.target.value)" placeholder="Filter">
     </mat-form-field>
@@ -41,7 +20,7 @@
         <ng-container matColumnDef="action">
           <th mat-header-cell *matHeaderCellDef mat-sort-header> Action </th>
           <td mat-cell *matCellDef="let row">
-            <button mat-mini-fab color="warn" (click)="onDeleteUnit(row.name)">
+            <button mat-mini-fab color="warn" (click)="onDeleteCategory(row.name)">
               <mat-icon>delete</mat-icon>
             </button>
           </td>
