--- a/src/app/components/settings/settings/settings.component.scss
+++ b/src/app/components/settings/settings/settings.component.scss
@@ -1,3 +1,8 @@
+.main-wrapper{
+  padding: 1%;
+  height: calc(100vh - 60px - 1%);
+}
+
 p{
     font-family: Arial, Helvetica, sans-serif;
 }
@@ -7,11 +12,9 @@ mat-label{
 }
 
 .settings-wrapper{
-    height: 90vh;
-    padding: 2%;
+    height: 95%;
     display: flex;
     justify-content: space-evenly;
-    align-content: center;
     align-items: center;
 }
 
@@ -19,7 +22,7 @@ mat-label{
     overflow: hidden;
     width: 40%;
     height: calc(100vh - 230px);
-    padding: 1%;
-    border: 1px solid rgb(105, 105, 105);
-    border-radius: 5px;
+    // padding: 1%;
+    // border: 1px solid rgb(105, 105, 105);
+    // border-radius: 5px;
 }
