--- a/src/app/components/static-mode/static-form/static-items.component.html
+++ b/src/app/components/static-mode/static-form/static-items.component.html
@@ -1,7 +1,7 @@
 <div class="main-wrapper">
   <div class="items-detail-section">
     <!-- DISPLAY ITEMS WILL SHOW HERE -->
-    <div class="display-items" *ngIf="displayedItems !== undefined && displayedItems.length > 0">
+    <mat-card class="mat-elevation-z5 display-items" *ngIf="displayedItems !== undefined && displayedItems.length > 0">
       <div class="items-loop" *ngFor="let item of displayedItems" (click)="onAddItem(item._id)">
         <div class="item-display-img mat-elevation-z4" matRipple matRippleUnbounded="false">
           <img [src]="item.itemImage" class="item-img">
@@ -12,19 +12,24 @@
         <div class="item-price">
           <mat-label>Rs: <strong>{{item.itemPrice}}</strong></mat-label>
         </div>
-        <mat-divider></mat-divider>
       </div>
-    </div>
+    </mat-card>
 
     <!-- SELECTED ITEMS WILL SHOW HERE -->
-    <div class="item-selected-container">
+    <mat-card class="mat-elevation-z5 item-selected-container">
       <div class="section-name-cont">
-        <p>Client Details</p>
-        <button mat-mini-fab class="reset-button" (click)="resetForm()" matTooltip="reset form">
+        <div class="heading-icon-div">
+          <div>
+            <mat-icon>contacts</mat-icon>
+          </div>
+          <div>
+            <mat-label>&nbsp; Details</mat-label>
+          </div>
+        </div>
+        <button color="primary" mat-mini-fab class="reset-button" (click)="resetForm()" matTooltip="reset form">
           <mat-icon>replay</mat-icon>
         </button>
       </div>
-      <mat-divider></mat-divider>
       <form [formGroup]="cartItemsForm">
         <div class="client-details">
           <mat-form-field appearance="standard" class="half-width-fields">
@@ -39,11 +44,18 @@
             <mat-datepicker #picker></mat-datepicker>
           </mat-form-field>
         </div>
-        <div class="items-list">
-          <p>Items Purchased</p>
+        <div class="heading-icon-div">
+          <div>
+            <mat-icon>add_shopping_cart</mat-icon>
+          </div>
+          <div>
+            <mat-label>&nbsp; Selected Items</mat-label>
+          </div>
         </div>
-        <mat-divider></mat-divider>
-        <div class="selected-items-loop" formArrayName="itemsPurchased">
+        <div class="no-item-selected" *ngIf="getItemsFormArray.controls.length === 0">
+          <mat-label>To select items, click item on left.</mat-label>
+        </div>
+        <div class="selected-items-loop" formArrayName="itemsPurchased" #staticSelectedItem>
           <div class="individual-item-loop" *ngFor="let cartItem of getItemsFormArray.controls; let i = index"
             [formGroupName]="i">
             <mat-form-field appearance="standard" class="small-width-fields">
@@ -81,10 +93,10 @@
         </div>
 
       </form>
-    </div>
+    </mat-card>
   </div>
 
-  <div class="recipt-preview-area">
+  <mat-card class="mat-elevation-z5 recipt-preview-area">
     <!-- BILL PREVIEW  -->
     <div class="bill-preview">
       <app-static-recipt-preview [previewData]="reciptPreviewData"></app-static-recipt-preview>
@@ -95,10 +107,11 @@
       <button mat-raised-button class="save-btn" (click)="saveItem()" [disabled]="!cartItemsForm.valid">
         <mat-icon>save</mat-icon> Save
       </button>
-      <button mat-raised-button color="primary" (click)="trigeerTrailNotification()" class="save-and-print-btn" [disabled]="!cartItemsForm.valid">
+      <button mat-raised-button color="primary" (click)="trigeerTrailNotification()" class="save-and-print-btn"
+        [disabled]="!cartItemsForm.valid">
         <mat-icon>print</mat-icon>Save & Print
       </button>
     </div>
-  </div>
+  </mat-card>
 
 </div>
