--- a/src/styles.scss
+++ b/src/styles.scss
@@ -36,3 +36,6 @@ img, p, mat-label{
 
 @import "~@angular/material/prebuilt-themes/indigo-pink.css";
 
+
+html, body { height: 100%; }
+body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
